syntax = "proto3";

option java_package = "antonBurshteyn.facedetection.grpc";
option java_outer_classname = "FaceDetectionProto";

package facedetection;

service FaceDetectionService {
  rpc DetectFaces (ImageRequest) returns (FaceDetectionResponse);
}

message ImageRequest {
  bytes image = 1;
}

message FaceDetectionResponse {
  repeated Face faces = 1;
}

message Face {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
  float confidence = 5;
}
